--- a/views/admin/_show.ejs
+++ b/views/admin/_show.ejs
@@ -3,7 +3,7 @@
 <tr>
     <td><%= i+1 %></td>
     <td><%=products[i].name  %></td>
-    <td><img src="<%=products[i].image  %>" alt="" style="width:100px "></td>
+    <td><img src="<%=products[i].image[0]  %>" alt="" style="width:100px "></td>
     <td><%=products[i].brand.name  %></td>
     <td><%=products[i].description  %></td>
     <td><%=products[i].price  %></td>
