--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -30,15 +30,12 @@
 			<div class="row s_product_inner">
 				<div class="col-lg-6">
 					<div class="s_Product_carousel">
-						<div class="single-prd-item">
-							<img class="img-fluid" src="<%=products.image  %>" alt="">
-						</div>
-						<div class="single-prd-item">
-							<img class="img-fluid" src="<%=products.image  %>" alt="">
-						</div>
-						<div class="single-prd-item">
-							<img class="img-fluid" src="<%=products.image  %>" alt="">
-						</div>
+						<% products.image.forEach(element => { %>
+							<div class="single-prd-item">
+								<img class="img-fluid" src="<%=element %>" alt="">
+							</div>
+						<% }) %>
+						
 					</div>
 				</div>
 				<div class="col-lg-5 offset-lg-1">
