--- a/views/admin/_sideBar.ejs
+++ b/views/admin/_sideBar.ejs
@@ -27,6 +27,7 @@
             <a href="/add-product" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Add Products</a>
             <a href="/user-data" class="nav-item nav-link"><i class="fa fa-th me-2"></i>User Data</a>
             <a href="/product-data" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Product Data</a>
+            <a href="/order-data" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Order Data</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
             <!-- <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
