--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -1,28 +1,59 @@
 <%- include('_userheader') %>
+<%- include('_header') %>
 
-	
-	<%- include('_adminHeaderNavBar') %>
-	
 
-	<!-- Start Banner Area -->
-	<section class="banner-area organic-breadcrumb">
-		<div class="container">
-			<div class="breadcrumb-banner d-flex flex-wrap align-items-center ">
-				<div class="col-first">
-					<h1 style="color: orange;">Add Product</h1>
-					<nav class="d-flex align-items-center">
-						<a style="color: orange;" href="/dashboard">Dashboard<span class="lnr lnr-arrow-right"></span></a>
-						<a style="color: orange;" href="/add-product">Add Product</a>
-					</nav>
+
+	 <!-- sidebar -->
+	 <div class="sidebar pe-4 pb-3">
+		<nav class="navbar bg-light navbar-light">
+			<a href="index.html" class="navbar-brand mx-4 mb-3">
+				<h3 class="text-primary"><i class="fa fa-hashtag me-2">ADMIN</i></h3>
+			</a>
+			<!-- <div class="d-flex align-items-center ms-4 mb-4">
+				<div class="position-relative">
+					<img class="rounded-circle" src="/assets/admin/img/ejas.jpg" alt="" style="width: 40px; height: 40px;">
+					<div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
+				</div>
+				<div class="ms-3">
+					<h6 class="mb-0">Ejas Shereef</h6>
+					<span>Admin</span>
+				</div>
+			</div> -->
+			<div class="navbar-nav w-100">
+				<a href="/dashboard" class="nav-item nav-link "><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+				<!-- <div class="nav-item dropdown">
+					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
+					<div class="dropdown-menu bg-transparent border-0">
+						<a href="button.html" class="dropdown-item">Buttons</a>
+						<a href="typography.html" class="dropdown-item">Typography</a>
+						<a href="element.html" class="dropdown-item">Other Elements</a>
+					</div>
+				</div> -->
+			   
+				<a href="/add-product" class="nav-item nav-link active "><i class="fa fa-keyboard me-2"></i>Add Products</a>
+				<a href="/user-data" class="nav-item nav-link"><i class="fa fa-th me-2"></i>User Data</a>
+				<a href="/product-data" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Product Data</a>
+				<a href="/order-data" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Order Data</a>
+				<a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
+				<div class="nav-item dropdown">
+					<!-- <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
+					<div class="dropdown-menu bg-transparent border-0">
+						<a href="signin.html" class="dropdown-item">Sign In</a>
+						<a href="signup.html" class="dropdown-item active">Sign Up</a>
+						<a href="404.html" class="dropdown-item">404 Error</a>
+						<a href="blank.html" class="dropdown-item">Blank Page</a>
+					</div> -->
 				</div>
 			</div>
-		</div>
-	</section>
-	<!-- End Banner Area -->
+		</nav>
+	</div>
+     <!-- sidebar -->
 
+	
 	<!--================Login Box Area =================-->
 	<section class="login_box_area section_gap">
 		<div class="container">
+				<%- include('_navBar') %>
 			<div class="row">
 				<!-- <div class="col-lg-6">
 					<div class="login_box_img">
@@ -56,7 +87,7 @@
 							</div>
 							
 							<div class="col-md-12 form-group">
-								<input type="file" class="form-control" id="image" name="image" placeholder="Image" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Image'">
+								<input type="file" multiple class="form-control" id="image" name="image" placeholder="Image" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Image'">
 							</div>
 
                             <div class="col-md-12 form-group">
@@ -65,7 +96,7 @@
 
 							
 							<div class="col-md-12 form-group mb-5">
-								<button type="submit" value="submit" class="primary-btn">Add Product</button>
+								<button type="submit" value="submit" class="btn-secondary">Add Product</button>
 								
 							</div>
 						</form>
@@ -79,5 +110,5 @@
 	
 	
 
-
+<%- include('_footer') %>
 	<%- include('_userfooter') %>
