--- a/views/admin/updateUser.ejs
+++ b/views/admin/updateUser.ejs
@@ -37,30 +37,34 @@
 				</div> -->
 				<div class="col-lg-12">
 					<div class="login_form_inner">
-						<h3>Add New Product</h3>
-						<form class="row login_form"  method="put" id="updateUser" >
+						<h3>Update User</h3>
+						<form class="row login_form"  method="post" id="updateUser" action="/update-user/<%= users._id %>" enctype="multipart/form-data" >
 							<div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="addName" name="addName" value="<%=users.name  %>" placeholder="Product Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Product Name'">
+								<input type="text" class="form-control"  name="name" value="<%=users.name  %>" placeholder="Product Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Product Name'">
+							</div>
+							<div class="col-md-12 form-group">
+								<input type="file" class="form-control" id="image" name="image" placeholder="Image" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Image'">
 							</div>
 							<div class="col-md-12 row form-group">
-								<label class="col-md-5 mt-3 ml-2" for="addBrand">Choose the Brand:</label>
-                                    <select class="col-md-6" name="addBrand" value="<%=users.brand  %>" id="addBrand">
-                                      <option value="<%=users.brand %>"><%=users.brand %></option>
-                                      <option value="adidas">Adidas</option>
-                                      <option value="nike">Nike</option>
-                                      <option value="new balance">New Balance</option>
-                                      <option value="hoodies">Hoodies</option>
+								<label class="col-md-5 mt-3 ml-2" for="status">Status:</label>
+                                    <select class="col-md-6" name="status" value="<%=users.status  %>">
+                                      <option value="<%=users.status %>"><%=users.status %></option>
+                                      <option value="Active">Active</option>
+                                      <option value="Inactive">Inactive</option>
+                                      
                                     </select>
 							</div>
                             <div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="addDescription" name="addDescription" value="<%=users.description  %>" placeholder="Product Description" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Product Description'">
+								<input type="text" class="form-control"  name="email" value="<%=users.email %>" placeholder="Email Id" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Id'">
 							</div>
-                            <div class="col-md-12 form-group">
-								<input type="number" class="form-control" id="addPrice" name="addPrice" value="<%=users.price  %>" placeholder="Price" onfocus="this.placeholder = ''" onblur="this.placeholder = 'price'">
+
+							<div class="col-md-12 form-group">
+								<input type="tel" class="form-control"  name="phone" value="<%=users.phone %>" placeholder="Phone No" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone No'">
 							</div>
+                            
 							
 							<div class="col-md-12 form-group mb-5">
-								<button type="submit" value="submit" class="primary-btn">Update Product</button>
+								<button type="submit" value="submit" class="primary-btn">Update User</button>
 								
 							</div>
 						</form>
