--- a/views/user/_headerNavBar.ejs
+++ b/views/user/_headerNavBar.ejs
@@ -48,6 +48,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                              aria-expanded="false"><%= user.name %></a>
                             <ul class="dropdown-menu">
+                                <li class="nav-item "><a class="nav-link" href="/user-profile">Profile</a></li>
                                 <li class="nav-item "><a class="nav-link" href="/user-logout">Logout</a></li>
                                
                             </ul>
