--- a/views/user/adidas.ejs
+++ b/views/user/adidas.ejs
@@ -62,7 +62,7 @@
                              
                                 <% array.forEach(function(array) { %>
                                     <div class="single-product col-lg-4 col-md-6 ">
-                                        <img class="img-fluid" src=<%= array.image %> alt="">
+                                        <img class="img-fluid" src=<%= array.image[0] %> alt="">
                                         <div class="product-details">
                                             <h5><%= array.brand.name %></h5>
                                             <a href="/product-detail?id=<%= array._id%>"><h6><%= array.description %></h6></a>
