--- a/views/user/allProduct.ejs
+++ b/views/user/allProduct.ejs
@@ -57,7 +57,7 @@
 						<div class="row">
 							<% content.forEach(function(content) { %>
 							<div class="single-product col-lg-4 col-md-6 ">
-								<img class="img-fluid" src=<%= content.image %> alt="">
+								<img class="img-fluid" src=<%= content.image[0] %> alt="">
 								<div class="product-details">
 									<h5><%= content.brand.name %></h5>
 									<a href="/product-detail?id=<%= content._id%>"><h6><%= content.description %></h6></a>
