--- a/views/user/forgetPassword.ejs
+++ b/views/user/forgetPassword.ejs
@@ -9,10 +9,10 @@
 		<div class="container">
 			<div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
 				<div class="col-first">
-					<h1>Forget Password</h1>
+					<h1>Forgot Password</h1>
 					<nav class="d-flex align-items-center">
 						<a href="/landingPage">Home<span class="lnr lnr-arrow-right"></span></a>
-						<a href="forgetPassword.ejs">Forget Password</a>
+						<a href="/forgotPassword">Forgot Password</a>
 					</nav>
 				</div>
 			</div>
@@ -36,7 +36,7 @@
 				</div> -->
 				<div class="col-lg-12 ">
 					<div class="login_form_inner">
-						<h3>Forget Password?</h3>
+						<h3>Forgot Password?</h3>
 						<form class="row login_form mb-5" action="/send-otp" method="post" id="contactForm" novalidate="novalidate">
 							
 							<!-- <div class="col-md-3 form-group mb-3">
